@@ -370,3 +370,5 @@ how many different types of information the first line toggles in the player.
 - Mysql only: Fix order of insertion into empty playlist. Found by Thomas
 Balke.
 - update README.* about MySQL with utf8
+- importing subdirectories with mugglei: sorting by folder did not work for
+  those tracks. Found by Thomas Balke.
